# overnvr

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.aarch64  Dockerfile.devx86
overnvr/: Cargo.toml
overnvr-deepstream/: Cargo.toml  build.rs
overnvr-deepstream/src/: lib.rs  wrapper.hpp
overnvr-deepstream/src/detector/: mod.rs  model.rs
overnvr-deepstream/src/surface/: mod.rs
overnvr/src/: main.rs  track.rs
overnvr/src/api/: auth.rs  error.rs  mod.rs
overnvr/src/client/: api.rs  input.rs  mod copy.rs  mod.rs  model.rs
overnvr/src/database/: mod.rs
overnvr/src/dvr/: mod.rs
overnvr/src/model/: mod.rs  utils.rs
overnvr/src/source/: mod.rs  source_link.rs
src/: main.rs  packetizer.rs  track.rs  wrapper.cpp
src/client/: mod.rs
src/detector/: mod.rs  model.rs
src/dvr/: mod.rs
src/model/: mod.rs  mqtt.rs  utils.rs
src/source/: mod.rs  source_link.rs
src/surface/: mod.rs
