[package]
name = "overnvr-deepstream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.59.2"
cc = "1.0.73" 
pkg-config = "0.3.22"

[dependencies]
anyhow = "1.0.56"
geo = "0.18.0"
geo-types = {version="0.7", features=["serde"]}
geojson = {version="0.22.2", features=["geo-types"]}
glib = "0.15.9"
gst = {package="gstreamer", version="0.18.6", features=["v1_14"]}
gst-sys = {version = "0.18", features = ["v1_8"], package = "gstreamer-sys"}
gst-app = {package="gstreamer-app", version= "0.18.0", features=["v1_14"]}
libc = "0.2"
once_cell = "1.10.0"
serde = "1.0.136"
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = {version = "1.15", features = ["full", "tracing"]}

tokio-util = { version = "0.6.9" }
toml = "0.5.8"
rand = "0.8.5"

futures = "0.3"


[dependencies.futures-sink]
version = "0.3"

[dependencies.futures-util]
version = "0.3"
features = ["sink"]
